# leanecon_v2

./: .env.example  .gitignore  CONTRIBUTING.md  Codex_Briefing_Phase2A.md  Codex_Briefing_Phase3.md  Dockerfile  NOTICE  PROGRAM.md  README.md  ROADMAP.md  SESSION_REPORT.md  TRADEMARK.md  docker-compose.yml  pyproject.toml  requirements.txt  rewrite_dashboard.py
.paperclip/: paperclip.yaml
docs/: API_CONTRACT.md  ARCHITECTURE.md  DEPLOYMENT.md  LEAN4_GUIDE.md  PAPER.md  PAPERCLIP_LOCAL_SETUP.md  PAPERCLIP_SETUP.md  PROVIDER_GUIDE.md  REPL_AUDIT_DAY2.md  REPL_VERIFICATION.md  SUBAGENT_ARCHITECTURE.md  V2_BENCHMARK_BASELINE.md  paper_style_guide.md
evals/: __init__.py  common.py  e2e.py  formalizer_only.py  prover_only.py  report.py
frontend/: README.md  index.html  package-lock.json  package.json
lean_workspace/: 010f60b4_6a3f_43fd_aca8_93876669d0e5_fast_8_8458e40129.lean  3070e8bb_9426_4bc4_aa61_f189333eb87a_fast_6_517d921945.lean  3ab243d2_dc78_4a0e_9458_55dfe09a61b2_fast_3_63afbaa5e1.lean  7187bf68_3ac7_4200_835b_3a8b9efac66f_single_4_a6a718c41f.lean  9c0e3f27_c872_434f_8140_3fb4cb742e65_fast_7_cd8c894d8f.lean  LeanEcon.lean  ac306bf0_f9d7_4e6f_a14f_bb2abf92a6b5_initial_00abf12224.lean  job_arith_single_3_4a54badc47.lean  lake-manifest.json  lakefile.toml
skills/: SKILL_LEAN.md  leanecon-api-SKILL.md
src/: __init__.py  api.py  config.py  models.py  preamble_library.py
tests/: __init__.py  conftest.py  test_api_smoke.py  test_evals.py  test_formalizer.py  test_gemini_driver.py  test_mistral_driver.py  test_prover.py  test_search.py  test_store.py
(+76 files in other folders)
